Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26010

Assertion `lsn > 2' failed in buf_pool_t::get_oldest_modification

    XMLWordPrintable

Details

    Description

      origin/10.6, 10.6 101da87228f11a1d7582f5dccfda7f30ac3b5668 2021-06-23T19:36:45+03:00
      compiled with debug+ASAN
      (rr) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00002400745a3859 in __GI_abort () at abort.c:79
      #2  0x00002400745a3729 in __assert_fail_base (fmt=0x240074739588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55599b73b880 "lsn > 2", file=0x55599b738360 "/data/Server/10.6S/storage/innobase/include/buf0buf.h", line=1488, 
          function=<optimized out>) at assert.c:92
      #3  0x00002400745b4f36 in __GI___assert_fail (assertion=assertion@entry=0x55599b73b880 "lsn > 2", file=file@entry=0x55599b738360 "/data/Server/10.6S/storage/innobase/include/buf0buf.h", line=line@entry=1488, 
          function=function@entry=0x55599b73c360 "lsn_t buf_pool_t::get_oldest_modification(lsn_t)") at assert.c:101
      #4  0x000055599a9b3c69 in buf_pool_t::get_oldest_modification (empty_lsn=0, this=<optimized out>) at /data/Server/10.6S/storage/innobase/include/buf0buf.h:1488
      #5  buf_flush_page_cleaner () at /data/Server/10.6S/storage/innobase/buf/buf0flu.cc:2218
      #6  0x000055599a9b56d5 in std::__invoke_impl<void, void (*)()> (__f=<optimized out>) at /usr/include/c++/9/bits/invoke.h:89
      #7  std::__invoke<void (*)()> (__fn=<optimized out>) at /usr/include/c++/9/bits/invoke.h:95
      #8  std::thread::_Invoker<std::tuple<void (*)()> >::_M_invoke<0ul> (this=<optimized out>) at /usr/include/c++/9/thread:244
      #9  std::thread::_Invoker<std::tuple<void (*)()> >::operator() (this=<optimized out>) at /usr/include/c++/9/thread:251
      #10 std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (*)()> > >::_M_run (this=<optimized out>) at /usr/include/c++/9/thread:195
      #11 0x000042f877897d84 in ?? () from /lib/x86_64-linux-gnu/libstdc++.so.6
      #12 0x00002d1c1aec8609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #13 0x00002400746a0293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      (rr) quit
      pluto:/data/Results/1624470119/TBR-1135/dev/shm/vardir/1624470119/196/1/rr
       
      RQG
      ===
      git clone https://github.com/mleich1/rqg --branch experimental
       
      perl rqg.pl \
      --grammar=conf/mariadb/partitions_innodb.yy \
      --reporters=CrashRecovery1 \
      --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
      --mysqld=--loose-idle_write_transaction_timeout=0 \
      --mysqld=--loose-idle_transaction_timeout=0 \
      --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      --mysqld=--connect_timeout=60 \
      --mysqld=--interactive_timeout=28800 \
      --mysqld=--slave_net_timeout=60 \
      --mysqld=--net_read_timeout=30 \
      --mysqld=--net_write_timeout=60 \
      --mysqld=--loose-table_lock_wait_timeout=50 \
      --mysqld=--wait_timeout=28800 \
      --mysqld=--lock-wait-timeout=86400 \
      --mysqld=--innodb-lock-wait-timeout=50 \
      --no-mask \
      --queries=10000000 \
      --seed=random \
      --reporters=Backtrace \
      --reporters=ErrorLog \
      --reporters=Deadlock1 \
      --validators=None \
      --mysqld=--log_output=none \
      --mysqld=--log-bin \
      --mysqld=--log_bin_trust_function_creators=1 \
      --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      --engine=InnoDB \
      --restart_timeout=240 \
      --mysqld=--plugin-load-add=file_key_management.so \
      --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
      --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=600 \
      --mysqld=--innodb_stats_persistent=off \
      --mysqld=--innodb_adaptive_hash_index=off \
      --mysqld=--loose-innodb_evict_tables_on_commit_debug=off \
      --mysqld=--loose-max-statement-time=30 \
      --threads=33 \
      --duration=100 \
      --mysqld=--innodb-use-native-aio=0 \
      --rr=Extended \
      --rr_options=--chaos \
      --mysqld=--innodb_page_size=64K \
      --mysqld=--innodb-buffer-pool-size=24M \
      --no_mask \
      --workdir=<local settings> \
      --vardir=<local settings> \
      --mtr-build-thread=<local settings> \
      --basedir1=<local settings> \
      --script_debug=_nix_
       
      [ 'TBR-1135-MDEV-26010', 'mysqld: .{1,200}buf0buf.h:.{1,10}: lsn_t buf_pool_t::get_oldest_modification\(lsn_t\): Assertion \`lsn > 2\' failed.+RESULT: The RQG run ended with status STATUS_SERVER_CRASHED' ],
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.